# mind-control

./: README.md
client/: .env.local.sample  NOTES.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/api/: config.ts  record.ts
client/src/components/Dialog/: Dialog.tsx
client/src/components/Header/: Header.tsx  NavLink.tsx  constants.ts
client/src/components/Icons/: Energy.tsx  Logo.tsx  MoodGrin.tsx
client/src/components/Link/: Link.tsx
client/src/components/RangeInput/: RangeInput.tsx  index.ts
client/src/components/RecordDialog/: RecordDialog.tsx  index.ts
client/src/context/: axios-context.tsx
client/src/pages/Home/: Home.tsx
client/src/pages/NotFound/: NotFound.tsx
client/src/templates/: Main.tsx
client/src/types/: nav.ts  record.ts
service/: .env  .env.sample  .flaskenv  .gitignore  .pylintrc  Makefile  NOTES.md  README.md  app.py  config.py  docker-compose.yml  manage.py  models.py  pyproject.toml  requirements.txt  settings.py  swagger.yml
service/app/: __init__.py  decorators.py  models.py
service/app/views/: errors.py  generic.py  records.py
service/migrations/versions/: 053912fedaf1_change_date_column_default_value.py  c4cb9be79781_initial_migration.py
service/spec/http/: api.yml
service/swagger/http/: api.yml
